--- a/notebooks/01-Jupyter-Basics.ipynb
+++ b/notebooks/01-Jupyter-Basics.ipynb
@@ -47,11 +47,13 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "O terminal básico do IPython: digite `ipython`\n",
+    "O terminal básico do IPython digite:\n",
+    "\n",
+    "`ipython`\n",
     "\n",
     "```ipython\n",
     "\n",
@@ -63,21 +65,7 @@
     "%quickref -> Quick reference.\n",
     "help      -> Python's own help system.\n",
     "object?   -> Details about 'object', use 'object??' for extra details.\n",
-    "    \n",
-    "    In [1]: print(\"Hello World!\")\n",
-    "    Hello World!\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "IPython implementa uma séries de melhores e interatividade ao prompt do Python para fornecer uma experiência mais fluida e eficiente."
    ]
   },
   {
@@ -104,18 +92,7 @@
    },
    "outputs": [],
    "source": [
-    "print(\"Olá\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "<!-- Sigil for slide mode, remove later once we fix transitions limitation -->"
+    "print(\"Olá alunos\")"
    ]
   },
   {
@@ -140,18 +117,7 @@
    },
    "outputs": [],
    "source": [
-    "?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "<!-- Sigil for slide mode, remove later once we fix transitions limitation -->"
+    "float?"
    ]
   },
   {
@@ -162,7 +128,7 @@
     }
    },
    "source": [
-    "### Ajuda com `?` e `??`"
+    "### Ajuda com `??`"
    ]
   },
   {
@@ -178,20 +144,6 @@
    "source": [
     "import seawater as sw\n",
     "\n",
-    "sw.f?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
     "sw.f??"
    ]
   },
@@ -213,11 +165,25 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "<!-- Sigil for slide mode, remove later once we fix transitions limitation -->"
+    "### Ajuda com tab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "enumerate()"
    ]
   },
   {
@@ -249,29 +215,13 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "<!-- Sigil for slide mode, remove later once we fix transitions limitation -->"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "### Compl`<tab>`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Tab completion, especially for attributes, is a convenient way to explore the structure of any object you’re dealing with. Simply type `object_name.<TAB>` to view the object’s attributes. Besides Python objects and keywords, tab completion also works on file and directory names."
+    "## *Tab completion*\n",
+    "É uma forma conveniente, especialmente para atributos, de explorar\n",
+    "a estrutura dos objetos que você está lidando."
    ]
   },
   {
@@ -285,6 +235,7 @@
    },
    "outputs": [],
    "source": [
+    "import seawater as sw\n",
     "sw."
    ]
   },
@@ -325,17 +276,6 @@
    "outputs": [],
    "source": [
     "_ + 10"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "<!-- Sigil for slide mode, remove later once we fix transitions limitation -->"
    ]
   },
   {
@@ -396,7 +336,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -414,7 +357,7 @@
    },
    "outputs": [],
    "source": [
-    "_8 == Out[8]"
+    "_25 == Out[25]"
    ]
   },
   {
@@ -439,9 +382,9 @@
    },
    "outputs": [],
    "source": [
-    "print('último:', _)\n",
-    "print('penúltimo:', __)\n",
-    "print('antepenúltimo:', ___)"
+    "print(u'último: {}'.format(_))\n",
+    "print(u'penúltimo: {}'.format(__))\n",
+    "print(u'antepenúltimo: {}'.format(___))"
    ]
   },
   {
@@ -452,7 +395,7 @@
     }
    },
    "source": [
-    "### The input history is also available"
+    "### Histórico do *input*"
    ]
   },
   {
@@ -480,62 +423,23 @@
    },
    "outputs": [],
    "source": [
-    "_i"
+    "print(u'último: {}'.format(_i))\n",
+    "print(u'penúltimo: {}'.format(_ii))\n",
+    "print(u'antepenúltimo: {}'.format(_iii))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "_ii"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "print('last input:', _i)\n",
-    "print('next one  :', _ii)\n",
-    "print('and next  :', _iii)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
    "source": [
     "%history"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "<!-- Sigil for slide mode, remove later once we fix transitions limitation -->"
    ]
   },
   {
@@ -577,7 +481,7 @@
    "outputs": [],
    "source": [
     "files = !ls\n",
-    "print(\"Conteúdo do diretório:\")\n",
+    "print(u\"Conteúdo do diretório:\")\n",
     "print(files)"
    ]
   },
@@ -587,7 +491,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -611,7 +515,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Notebook"
    ]
@@ -620,7 +528,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "source": [
@@ -650,7 +558,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### $\\LaTeX$ equations\n",
     "\n",
@@ -677,7 +589,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Trabalhando com Notebooks\n",
     "\n",
@@ -695,14 +611,14 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
    "source": [
     "from IPython.nbformat import current\n",
     "\n",
-    "with open('00-jupyter-notebooks.ipynb') as f:\n",
+    "with open('01-Jupyter-Basics.ipynb') as f:\n",
     "    nb = current.read(f, 'json')\n",
     "\n",
     "nb.worksheets[0].cells[0]"
@@ -740,7 +656,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -752,7 +668,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -804,7 +723,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -845,7 +764,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -859,7 +778,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -872,7 +791,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -903,11 +822,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "from pandas import read_csv\n",
     "\n",
     "ctd = read_csv('ctd.dat', index_col='P')\n",
@@ -918,33 +839,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
     "1/0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "%debug"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "Perguntar dados ao usuário."
    ]
   },
   {
@@ -958,15 +860,17 @@
    },
    "outputs": [],
    "source": [
-    "curtindo = input('O que você acha desse tutorial até agora?')\n",
-    "print('Resposta :'.format(curtindo))"
+    "%debug"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -997,7 +901,6 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -1012,28 +915,25 @@
    },
    "outputs": [],
    "source": [
-    "x = np.linspace(0, 2*np.pi, 300)\n",
-    "y = np.sin(x**2)\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.plot(x, y)\n",
-    "ax.set_title(u\"O gorjeio de um pássaro?\")"
+    "plt.plot(ctd['S'], ctd['T'], 'ro')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "* Podemos usar texto *Markdown*,  equations *LaTeX*, imagen e muito mais\n",
-    "* Podem ser visualizados facilmente em HTML no [nbviewer](http://nbviewer.ipython.org/github/ipython/ipython/blob/1.x/examples/notebooks/Part 5 - Rich Display System.ipynb)"
+    "### Concluindo pode usar facilmente *Markdown*,  HTML, equações *LaTeX*, imagens, e muito mais!\n",
+    "\n",
+    "* Notebooks podem ser visualizados e compartilhados facilmente pelo [nbviewer](http://nbviewer.ipython.org/github/ipython/ipython/blob/1.x/examples/notebooks/Part 5 - Rich Display System.ipynb)"
    ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Curso UFBA (Python 2)",
    "language": "python",
