--- a/notebooks/03-matplotlib.ipynb
+++ b/notebooks/03-matplotlib.ipynb
@@ -22,7 +22,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Matplotlib é um pacote (ou módulo) Python usado pela comunidade científica\n",
     "para produzir gráficos 2D.  Esse pacote suporta diversos formatos como PNG,\n",
@@ -36,16 +40,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
+    "\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "O coração de **todos** os gráficos é o objeto *figure*.  O objeto `Figure`\n",
     "está no pode ser desenhado em qualquer formato de saída ou apenas a tela."
@@ -55,7 +68,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -66,7 +82,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Sozinho o objeto `Figure` não é interessante.  Temos que \"desenhar\" algo nele.\n",
     "\n",
@@ -82,7 +102,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -93,7 +116,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "A maior parte do tempo você vai trabalhar com o objeto `Axes`.  A documentação\n",
     "é bem detalhada e recomendo a leitura, principalmente do método `plot`:\n",
@@ -107,7 +134,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -120,7 +150,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Outros tipos de gráficos"
    ]
@@ -129,10 +163,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "x = np.linspace(-180, 180, 60)\n",
     "y = np.linspace(-90, 90, 30)\n",
     "x2d, y2d = np.meshgrid(x, y)\n",
@@ -144,18 +183,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -167,7 +198,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -179,7 +213,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -191,7 +228,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -203,7 +243,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -215,7 +258,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -230,7 +276,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Títulos, Legendas, colorbars e anotações"
    ]
@@ -239,30 +289,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
     "fig = plt.figure()\n",
     "ax = plt.axes()\n",
-    "# Adjust the created axes so that its topmost extent is 0.8 of the figure.\n",
     "fig.subplots_adjust(top=0.8)\n",
     "\n",
     "fig.suptitle(u'Título do \"Figure\"', fontsize=18, fontweight='bold')\n",
     "ax.set_title(u'Título do \"Axes', fontsize=16)\n",
-    "\n",
     "ax.set_xlabel('O Eixo X')\n",
     "ax.set_ylabel('O Eixo Y $y=f(x)$', fontsize=16)\n",
-    "\n",
-    "ax.text(0.5, 0.5, 'Texto centrado em (0.5, 0.5)\\nin data coordinates.',\n",
-    "        horizontalalignment='center', fontsize=14)"
+    "ax.text(0.5, 0.5, 'Texto centrado em (0.5, 0.5)\\nin data coordinates.', horizontalalignment='center', fontsize=14)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -283,7 +335,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -301,7 +356,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -318,7 +376,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -331,7 +392,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -342,7 +406,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Exemplo com dados reais"
    ]
@@ -351,7 +419,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -367,7 +438,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -379,7 +453,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -394,7 +471,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -409,7 +489,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -426,7 +509,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -443,7 +529,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -456,7 +545,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -468,7 +560,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -480,7 +575,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -493,7 +591,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -510,7 +611,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -521,7 +625,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -536,95 +643,116 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "skip"
+    }
    },
    "outputs": [],
    "source": [
-    "twopi = 2 * np.pi\n",
-    "n = 2\n",
-    "A = 2\n",
-    "w = twopi / 10\n",
-    "k = twopi / 200\n",
-    "phi = np.deg2rad(180)\n",
-    "t = np.arange(0, 10 * n, 0.01)\n",
-    "y = A * np.cos(w * t - k * 0 + phi)\n",
+    "def make_wave():\n",
+    "    twopi = 2 * np.pi\n",
+    "    n = 2\n",
+    "    A = 2\n",
+    "    w = twopi / 10\n",
+    "    k = twopi / 200\n",
+    "    phi = np.deg2rad(180)\n",
+    "    t = np.arange(0, 10 * n, 0.01)\n",
+    "    y = A * np.cos(w * t - k * 0 + phi)\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(8, 4))\n",
-    "ax.plot(t, y, linewidth='2', color='#006633')\n",
-    "ax.set_frame_on(False)\n",
-    "ax.axis([-0.1, 20.1, -3, 3])\n",
-    "ax.get_xaxis().set_ticks([])\n",
-    "ax.get_yaxis().set_ticks([])\n",
+    "    fig, ax = plt.subplots(figsize=(8, 4))\n",
+    "    ax.plot(t, y, linewidth='2', color='#006633')\n",
+    "    ax.set_frame_on(False)\n",
+    "    ax.axis([-0.1, 20.1, -3, 3])\n",
+    "    ax.get_xaxis().set_ticks([])\n",
+    "    ax.get_yaxis().set_ticks([])\n",
     "\n",
-    "# Box.\n",
-    "kw = dict(linestyle='--', color='grey', zorder=90)\n",
-    "ax.axhline(y=2, xmin=0.15, xmax=0.85, **kw)\n",
-    "ax.axhline(y=-2, xmin=0.15, xmax=0.85, **kw)\n",
-    "ax.axvline(x=5, ymin=-0.15, ymax=1.85, **kw)\n",
-    "ax.axvline(x=15, ymin=-0.15, ymax=1.85, **kw)\n",
+    "    # Box.\n",
+    "    kw = dict(linestyle='--', color='grey', zorder=90)\n",
+    "    ax.axhline(y=2, xmin=0.15, xmax=0.85, **kw)\n",
+    "    ax.axhline(y=-2, xmin=0.15, xmax=0.85, **kw)\n",
+    "    ax.axvline(x=5, ymin=-0.15, ymax=1.85, **kw)\n",
+    "    ax.axvline(x=15, ymin=-0.15, ymax=1.85, **kw)\n",
     "\n",
-    "# Zero line.\n",
-    "_ = ax.annotate('', xy=(20, 0), xycoords='data',\n",
-    "            xytext=(0, 0), textcoords='data',\n",
-    "            arrowprops=dict(arrowstyle='->', color='black'))\n",
+    "    # Zero line.\n",
+    "    _ = ax.annotate('', xy=(20, 0), xycoords='data',\n",
+    "                xytext=(0, 0), textcoords='data',\n",
+    "                arrowprops=dict(arrowstyle='->', color='black'))\n",
     "\n",
-    "_ = ax.annotate(u'Espaço', xy=(20, 0), xycoords='data',\n",
-    "            xytext=(20, 0.05), textcoords='data', \n",
-    "            va='bottom', ha='right', color='blue')\n",
+    "    _ = ax.annotate(u'Espaço', xy=(20, 0), xycoords='data',\n",
+    "                xytext=(20, 0.05), textcoords='data', \n",
+    "                va='bottom', ha='right', color='blue')\n",
     "\n",
-    "_ = ax.annotate('Tempo', xy=(20, 0), xycoords='data',\n",
-    "            xytext=(20, -0.05), textcoords='data', \n",
-    "            va='top', ha='right', color='red')\n",
+    "    _ = ax.annotate('Tempo', xy=(20, 0), xycoords='data',\n",
+    "                xytext=(20, -0.05), textcoords='data', \n",
+    "                va='top', ha='right', color='red')\n",
     "\n",
-    "# Arrow commom properties.\n",
-    "arrowprops = dict(arrowstyle='<->', color='black')\n",
+    "    # Arrow commom properties.\n",
+    "    arrowprops = dict(arrowstyle='<->', color='black')\n",
     "\n",
-    "# Wave period (or length).\n",
-    "_ = ax.annotate('', xy=(15, 2.5), xycoords='data',\n",
-    "            xytext=(5, 2.5), textcoords='data',\n",
-    "            arrowprops=arrowprops)\n",
+    "    # Wave period (or length).\n",
+    "    _ = ax.annotate('', xy=(15, 2.5), xycoords='data',\n",
+    "                xytext=(5, 2.5), textcoords='data',\n",
+    "                arrowprops=arrowprops)\n",
     "\n",
-    "_ = ax.annotate(u'Comprimento', xy=(10, 2.5), xycoords='data',\n",
-    "            xytext=(10, 2.55), textcoords='data', \n",
-    "            va='bottom', ha='center', color='blue')\n",
+    "    _ = ax.annotate(u'Comprimento', xy=(10, 2.5), xycoords='data',\n",
+    "                xytext=(10, 2.55), textcoords='data', \n",
+    "                va='bottom', ha='center', color='blue')\n",
     "\n",
-    "_ = ax.annotate(u'Período', xy=(10, 2.5), xycoords='data',\n",
-    "            xytext=(10, 2.45), textcoords='data', \n",
-    "            va='top', ha='center', color='red')\n",
+    "    _ = ax.annotate(u'Período', xy=(10, 2.5), xycoords='data',\n",
+    "                xytext=(10, 2.45), textcoords='data', \n",
+    "                va='top', ha='center', color='red')\n",
     "\n",
-    "# Amplitude.\n",
-    "_ = ax.annotate('', xy=(5, 2), xycoords='data',\n",
-    "            xytext=(5, 0), textcoords='data',\n",
-    "            arrowprops=arrowprops)\n",
+    "    # Amplitude.\n",
+    "    _ = ax.annotate('', xy=(5, 2), xycoords='data',\n",
+    "                xytext=(5, 0), textcoords='data',\n",
+    "                arrowprops=arrowprops)\n",
     "\n",
-    "_ = ax.annotate('Amplitude', xy=(5, 1), xycoords='data',\n",
-    "            xytext=(4.9, 1), textcoords='data', \n",
-    "            va='center', ha='right', rotation=90)\n",
+    "    _ = ax.annotate('Amplitude', xy=(5, 1), xycoords='data',\n",
+    "                xytext=(4.9, 1), textcoords='data', \n",
+    "                va='center', ha='right', rotation=90)\n",
     "\n",
-    "# Height.\n",
-    "ax.annotate('', xy=(15, 2), xycoords='data',\n",
-    "            xytext=(15, -2), textcoords='data',\n",
-    "            arrowprops=arrowprops)\n",
+    "    # Height.\n",
+    "    ax.annotate('', xy=(15, 2), xycoords='data',\n",
+    "                xytext=(15, -2), textcoords='data',\n",
+    "                arrowprops=arrowprops)\n",
     "\n",
-    "_ = ax.annotate('Altura', xy=(15, 1), xycoords='data',\n",
-    "            xytext=(14.9, 0.1), textcoords='data', \n",
-    "            va='bottom', ha='right', rotation=90)\n",
+    "    _ = ax.annotate('Altura', xy=(15, 1), xycoords='data',\n",
+    "                xytext=(14.9, 0.1), textcoords='data', \n",
+    "                va='bottom', ha='right', rotation=90)\n",
     "\n",
-    "# Angle.\n",
-    "_ = ax.annotate('', xy=(15, 2), xycoords='data',\n",
-    "            xytext=(5, -2), textcoords='data',\n",
-    "            arrowprops=arrowprops)\n",
+    "    # Angle.\n",
+    "    _ = ax.annotate('', xy=(15, 2), xycoords='data',\n",
+    "                xytext=(5, -2), textcoords='data',\n",
+    "                arrowprops=arrowprops)\n",
     "\n",
-    "_ = ax.annotate(u'Inclinação', xy=(10, 0), xycoords='data',\n",
-    "            xytext=(10.5, 0.5), textcoords='data', \n",
-    "            va='center', ha='center', rotation=35)"
+    "    _ = ax.annotate(u'Inclinação', xy=(10, 0), xycoords='data',\n",
+    "                xytext=(10.5, 0.5), textcoords='data', \n",
+    "                va='center', ha='center', rotation=35)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "make_wave()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "skip"
+    }
    },
    "outputs": [],
    "source": [
@@ -657,38 +785,53 @@
     "    ax.xaxis_date()\n",
     "    return q\n",
     "\n",
+    "def make_quiver():\n",
+    "    from datetime import datetime, timedelta\n",
+    "\n",
+    "    x = np.arange(100, 110, 0.1)\n",
+    "    start = datetime.now()\n",
+    "    time = [start + timedelta(days=n) for n in range(len(x))]\n",
+    "    u, v = np.sin(x), np.cos(x)\n",
     "\n",
     "\n",
+    "    fig, ax = plt.subplots(figsize=(11, 2.75))\n",
     "\n",
-    "from datetime import datetime, timedelta\n",
+    "    q = stick_plot(time, u, v, ax=ax, width=0.002, color='green')\n",
     "\n",
-    "x = np.arange(100, 110, 0.1)\n",
-    "start = datetime.now()\n",
-    "time = [start + timedelta(days=n) for n in range(len(x))]\n",
-    "u, v = np.sin(x), np.cos(x)\n",
-    "\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(11, 2.75))\n",
-    "\n",
-    "q = stick_plot(time, u, v, ax=ax, width=0.002, color='green')\n",
-    "\n",
-    "ref = 1\n",
-    "qk = ax.quiverkey(q, 0.1, 0.85, ref,\n",
-    "                  \"%s N m$^{-2}$\" % ref,\n",
-    "                  labelpos='N', coordinates='axes')"
+    "    ref = 1\n",
+    "    qk = ax.quiverkey(q, 0.1, 0.85, ref,\n",
+    "                      \"%s N m$^{-2}$\" % ref,\n",
+    "                      labelpos='N', coordinates='axes')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "make_quiver()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
     "from IPython.display import IFrame\n",
     "\n",
-    "IFrame(\"http://matplotlib.org/gallery.html\", width=900, height=700)"
+    "IFrame(\"http://matplotlib.org/gallery.html\", width=900, height=500)"
    ]
   }
  ],
