--- a/notebooks/04-pandas.ipynb
+++ b/notebooks/04-pandas.ipynb
@@ -19,7 +19,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Ler um `CSV` e mostrar apenas o início da tabela."
    ]
@@ -29,7 +33,10 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -40,7 +47,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "O `read_csv` (e vários outros métodos do pandas) possuí uma infinidade de\n",
     "opções para ajudar na leitura dos dados."
@@ -51,7 +62,10 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -65,7 +79,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Algumas facilidades do pandas é ter *labels* ricos em informação.  Então vamos renomear as nossas colunas e ordená-las pela profundidade."
    ]
@@ -74,7 +92,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -87,7 +108,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Outra facilidade é a limpeza da tabela, aqui jogamos fora todos os inválidos\n",
     "(*Not-a-Number*) apenas quando todos os valores do eixo 1 (colunas) foram\n",
@@ -99,7 +124,10 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -111,7 +139,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -121,7 +152,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Como será a variabilidade desses dados?"
    ]
@@ -130,7 +165,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -141,7 +179,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -154,7 +195,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -163,17 +207,36 @@
     "\n",
     "style.use('ggplot')\n",
     "\n",
-    "fig, axes = plt.subplots(figsize=(11, 1.25*11), nrows=11, sharex=True, sharey=False)\n",
+    "def make_plot():\n",
+    "    fig, axes = plt.subplots(figsize=(11, 1.25*11), nrows=11, sharex=True, sharey=False)\n",
     "\n",
-    "kw = dict(color='darkorange', linewidth=2)\n",
-    "for ax, col in zip(axes, df.columns):\n",
-    "    ax.plot(df['2015'].index, df['2015'][col], **kw)\n",
-    "    ax.set_ylabel('{} m'.format(col))"
+    "    kw = dict(color='darkorange', linewidth=2)\n",
+    "    for ax, col in zip(axes, df.columns):\n",
+    "        ax.plot(df['2015'].index, df['2015'][col], **kw)\n",
+    "        ax.set_ylabel('{} m'.format(col))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "make_plot()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Como já havíamos notado antes toda essa série parece ter um *gap* no mesmo \n",
     "lugar (provavelmente uma manutenção do fundeio).  Com o pandas podemos \n",
@@ -184,7 +247,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -196,7 +262,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -206,21 +275,29 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Com o pandas vocês podem facilmente \"re-amostar\" uma série ou tabela\n",
-    "para uma nova frequência temporal.  Os dois parâmetros principais para o"
+    "para uma nova frequência temporal."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "\n",
     "fig, ax = plt.subplots(figsize=(9, 5))\n",
     "\n",
     "ax = df.resample('M', how=np.median).plot(ax=ax)"
@@ -228,7 +305,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "- Group-by months/years (climatology)"
    ]
@@ -237,7 +318,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -253,7 +337,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -266,7 +353,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -282,7 +372,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -295,30 +388,40 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
-    "df.resample('A', how='mean').plot()"
+    "ax = df.resample('A', how='mean').plot()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
     "for col in df.columns:\n",
-    "    yearly[col] = (yearly[col] - yearly[col].mean()) / yearly[col].std(ddof=0)"
+    "    yearly[col] = ((yearly[col] - yearly[col].mean()) /\n",
+    "                   yearly[col].std(ddof=0))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -331,7 +434,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -342,7 +448,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -353,7 +462,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -374,7 +486,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -385,7 +500,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -406,18 +524,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
     "ax = df[['low', 'high']].plot()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://ocefpaf.github.io/python4oceanographers/blog/2013/07/29/python-ctd/"
    ]
   }
  ],
